2024-10-20 [ETC] Fix > Typo

--- a/ETC/마크다운 문법이란.md
+++ b/ETC/마크다운 문법이란.md
@@ -18,7 +18,7 @@
 
 따라서 `MarkUp` 은 텍스트에 태그나 기호를 표시하여 그 문서의 구조, 서식, 의미를 지정하는 것을 의미하며,
 
-이 개념이 그대로 **`HTML**, **Markdown**, **XML**` 등의 마크업 언어에도 적용된 것이다. 굳이 얘기하자면 **`디지털 마크업`** 이라고 볼 수 있겠다.
+이 개념이 그대로 `HTML, Markdown**, XML` 등의 마크업 언어에도 적용된 것이다. 굳이 얘기하자면 `디지털 마크업` 이라고 볼 수 있겠다.
 
 요약해서 마크업이란, 텍스트에 특별한 표식을 추가하여 **내용의 구조와 형식을 나타내는 방식**을 설명하는 용어이다.
 
