--- a/ETC/마크다운 문법이란.md
+++ b/ETC/마크다운 문법이란.md
@@ -12,7 +12,9 @@
 
 마크업`(MarkUp)`이라는 용어는 인쇄업에서 유래되었다.
 
-전통적으로 편집자는 원고에 표시`(Mark)`를 하여 인쇄자에게 텍스트의 서식, 배치, 글꼴 등의 정보를 제공했고, 이러한 과정을 `MarkUp` 이라고 불렀다.
+전통적으로 편집자는 원고에 표시`(Mark)`를 하여 인쇄자에게 텍스트의 서식, 배치, 글꼴 등의 정보를 제공했고,
+
+이러한 과정을 `MarkUp` 이라고 불렀다.
 
 컴퓨터가 등장하면서 문서의 구조와 형식을 지정하기 위한 태그와 코드로 이 개념이 확장되었고, 그것이 **마크업 언어**의 토대가 되었다.
 
