2024-10-20 [ETC] Update > Reference

--- a/ETC/마크다운 문법이란.md
+++ b/ETC/마크다운 문법이란.md
@@ -5,6 +5,7 @@
 * [📑 그래서 마크다운은 뭔데?](#그래서-마크다운은-뭔데)
 * [📑 공식문서를 읽기 싫은 사람들을 위한 사용방법 요약](#공식문서를-읽기-싫은-사람들을-위한-사용방법-요약)
 * [📑 실제로 보여지는 출력화면 (GITHUB 기준)](#실제로-보여지는-출력화면-github-기준)
+* [Reference](#reference)
 
 </br>
 
@@ -144,3 +145,5 @@ A footnote can also have multiple lines[^2].
 ![image (1)](https://github.com/user-attachments/assets/7e520e9a-b781-4ff9-9ef2-90a3696e4737)
 
 
+## Reference
+[GITHUB 마크다운 공식문서 바로가기](https://docs.github.com/ko/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax)
